# meshcore-mcp

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
examples/: claude_desktop_config.json  mcpo_config.json
specs/: openapi.json
src/meshcore_mcp/: __init__.py  channels.py  client.py  connection.py  message_handlers.py  server.py  state.py
src/meshcore_mcp/tools/: __init__.py  advertisements.py  connect.py  device.py  messages.py  time.py
