[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-mcp"
version = "0.1.0"
description = "MCP server for MeshCore companion radio nodes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MeshCore MCP", email = "hello@meshcore.dev" }
]
dependencies = [
    "mcp>=1.0.0",
    "meshcore>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
meshcore-mcp = "meshcore_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
