[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-mcp"
version = "0.1.0"
description = "MCP server for MeshCore API - provides tools for mesh network messaging and advertisements"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "IPNet", email = "info@ipnt.uk" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
meshcore-mcp = "meshcore_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
